tests/error/class-23.moc
@class NSObject {
}
+(id)init {}
@end

@class Point : NSObject {
    int x;
    int y;
}

+(id)init {
    x = true;
    y = 0;
}

@end
